changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Accept skill names with spaces (sense curse/sense magic) in addexp
command.
Andreas Kirschbaum 2010-12-04

Fix some compilers errors in CRE - 0b is non standard constant declaration,
some compilers do not like a semicolon after Q_PROPERTY declarations, and
it seemed some include files were missing.
MSW 2010-11-26

Added function to python plugin for getting the material name and materil
number of objects.  Returns python dict. (Affects cfpython_object.c and
cfpython_object_private.h)
Alestan 2010-11-25

Takes in account the magic of a cauldron when the chance of successfully
making a recipe is calculated (adds (cauldron->magic+1)/2 to the skill_level
in the calculation).
Khaleh 2010-11-24

Allow cost_string_from_value() callers to specify maximum coin to use.
This enables the guild script to display the account balance with amberium
instead of platinum, while leaving shops in platinum.
Nicolas Weeger 2010-11-22

Few shop fixes:
1) limit total paid for unpaid items to be per item, not per group -
   otherwise, player just has to sell items in smaller bunches which
   doesn't make much sense.
2) Change the minor randomization of shop values to be based on
   map reset time - in this way, values will change slightly, bug
   if you are splitting a larger group, you will get consistent values
   (and if you logout and log back in, as long as the map hasn't reset,
   will also get same value)
3) Reset value strings for sold items to cap at platinum - fixes problem
   when selling valuable items that message said you got paid in jade
   coins, when in fact you did not.